# solana-dev

./: .gitignore  README.md  package-lock.json  package.json
candy-machine-sugar-collection/: cache.json  config.json
candy-machine-sugar-collection/assets/: 0.json  1.json  2.json  3.json  collection.json
generate-keypair/: .env  .gitignore  check-balance.ts  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  generate-keypair.ts  keypair.json  mint-tokens.ts  my-script-transaction.ts  package-lock.json  package.json  send-ping-transaction.ts  testkey.key  transer-token.ts  transfer.ts
generate-keypair/components/: AddressInput.tsx  IntegerInput.tsx  TransferButton.tsx  WalletContextProvider.tsx  WalletDisplay.tsx
generate-keypair/pages/: index.tsx
native-dev/solana-movie-frontend/: package-lock.json
on-chain-anchor/anchor-counter/: package.json
on-chain-anchor/anchor-counter-frontend/: README.md
on-chain-anchor/anchor-iterate/: Anchor.toml
on-chain-anchor/anchor-movie-rev/: Anchor.toml
on-chain-anchor/anchor-nft/: Anchor.toml
on-chain/anchor-counter/: Anchor.toml  package-lock.json
on-chain/anchor-movie-rev/: package-lock.json
on-chain/anchor-movie-rev/programs/anchor-movie-rev/: Cargo.toml
on-chain/anchor-movie-rev/programs/anchor-movie-rev/src/: lib.rs
on-chain/anchor-student-intro/: Anchor.toml  package-lock.json
token-program-chall-front/: package-lock.json  package.json
token-program-chall-front/components/: AccountOwnerInput.tsx  AmountInput.tsx  AppBar.tsx  CreateMintButton.tsx  FormContext.tsx  MintInput.tsx  (+11 more)
(+21 files in other folders)
